partman-base (126) UNRELEASED; urgency=low

  [ Frans Pop ]
  * base.sh: skip dividers in ask_user if they are the first option.
    Closes: #498845.
  * base.sh: new function is_multipath_dev.

  [ Giuseppe Iuculano ]
  * init.d/parted: Set the sataraid flag for dmraid arrays.
    Patch based on work done by Luke Yelavich <themuso@ubuntu.com> in Ubuntu.
    The improved dmraid support requires parted (>= 1.8.8.git.2008.03.24-10).

 -- Frans Pop <fjp@debian.org>  Mon, 15 Sep 2008 13:04:18 +0200

partman-base (125) unstable; urgency=low

  [ Jérémy Bobbio ]
  * Add convert_to_megabytes() to lib/base.sh.

  [ Updated translations ]
  * Arabic (ar.po) by Ossama M. Khayat
  * Greek, Modern (el.po) by Emmanuel Galatoulas
  * French (fr.po) by Christian Perrier
  * Kurdish (ku.po) by Erdal Ronahi
  * Portuguese (Brazil) (pt_BR.po) by Felipe Augusto van de Wiel (faw)
  * Traditional Chinese (zh_TW.po) by Tetralet

 -- Jérémy Bobbio <lunar@debian.org>  Mon, 25 Aug 2008 21:06:21 +0200

partman-base (124) unstable; urgency=low

  [ Jérémy Bobbio ]
  * Fix humandev() for partitions of virtio virtual disks.
  * Use Choices-C in debconf_select instead of mangling the localised
    strings.  All templates using debconf_select or ask_user should now define
    the following:
      Choices-C: ${CHOICES}
      Choices: ${DESCRIPTIONS}
    In the absence of Choices-C, the old behaviour will still be supported for
    the moment.
  * Update partman/choose_partition, partman/storage_device,
    partman/free_space and partman/active_partition to the new format.
  * Enable cdebconf's new column alignment capability.
    Requires cdebconf (>= 0.133).
  * Remove valid_visuals.d and instead call by their orders all scripts in
    visual.d.
  * Do partition indenting in another visual.d script instead of hardcoding
    it in partition_tree_choices().
  * Switch visual.d scripts to use column alignment (${!TAB}).
  * Remove partition_tree_choice() "whitespaces" hack, now useless with the