@@ -56,9 +56,10 @@ confirm_changes () {
 			# Special case d-m devices to use a different description
 			if cat device | grep -q "/dev/mapper" ; then
 				device=$(cat device)
-				dmtype=$(dm_table $device)
-				# multipath devices are partitioned
-				if [  "$dmtype" != multipath ] && ! is_multipath_part $device; then
+				# dmraid and multipath devices are partitioned
+				if [ ! -f sataraid ] && \
+				   ! is_multipath_dev $device && \
+				   ! is_multipath_part $device); then
 					partdesc="partman/text/confirm_unpartitioned_item"
 				fi
 			fi
