@@ -4,6 +4,7 @@ partman-base (126) UNRELEASED; urgency=low
   * base.sh: skip dividers in ask_user if they are the first option.
     Closes: #498845.
   * base.sh: new function is_multipath_dev.
+  * commit.sh: display correct dmraid partition info when confirming changes.
 
   [ Giuseppe Iuculano ]
   * init.d/parted: Set the sataraid flag for dmraid arrays.
